[package]
name = "bunyan_view"
description = "Bunyan log file viewer"
version = "0.2.0"
authors = ["Elijah Zupancic <elijah@zupancic.name>"]
license = "MPL-2.0"
homepage = "https://github.com/dekobon/bunyan-view"
repository = "https://github.com/dekobon/bunyan-view"
keywords = ["buyan", "logging", "json-logging"]
categories = ["command-line-utilities", "development-tools::debugging", "value-formatting"]
readme = "README.md"

edition = "2021"

[features]
# this preserves the ordering of json
default = ["serde_json/preserve_order"]

# this effectively enable the feature `no-color` of colored when testing with
# `cargo test --feature dumb_terminal`
dumb_terminal = ["colored/no-color"]

[lib]
name = "bunyan_view"
path = "src/lib.rs"

[[bin]]
name = "bunyan"
path = "src/main.rs"

[dependencies]
clap = "2.33"
chrono = { version = "0.4", features = ["serde"] }
json_pretty = "0.1"
serde = "1.0.102"
serde_json = "1.0.41"
serde_derive = "1.0.102"
httpstatus = "0.1"
flate2 = "1.0"
colored = "1.9"
pager = "0.15"

[dev-dependencies]
bytes = "0.4"
pretty_assertions = "0.6"