[package]
name = "bunyan_view"
description = "A full-featured port of the Node Bunyan structured log file viewer"
version = "0.3.4-beta"
authors = ["Elijah Zupancic <elijah@zupancic.name>"]
license = "MPL-2.0"
homepage = "https://github.com/dekobon/bunyan-view"
repository = "https://github.com/dekobon/bunyan-view"
keywords = ["buyan", "logging", "json-logging"]
categories = ["command-line-utilities", "development-tools::debugging", "value-formatting"]
readme = "README.md"

edition = "2021"

[features]
# this preserves the ordering of json
default = ["serde_json/preserve_order"]

# this effectively enable the feature `no-color` of colored when testing with
# `cargo test --feature dumb_terminal`
dumb_terminal = ["colored/no-color"]

[lib]
name = "bunyan_view"
path = "src/lib.rs"

[[bin]]
name = "bunyan"
path = "src/main.rs"

[dependencies]
clap = "2.33"
chrono = { version = "0.4", features = ["serde"] }
json_pretty = "0.1"
serde = "1.0.102"
serde_json = "1.0.41"
serde_derive = "1.0.102"
httpstatus = "0.1"
flate2 = "1.0"
colored = "2.0.0"
pager = "0.16.1"
quick-js = "0.4"

[dev-dependencies]
bytes = "1.3.0"
pretty_assertions = "1.3.0"

[profile.release]
lto = true

[package.metadata.deb]
copyright = "2021, Elijah Zupancic <elijah@zupancic.name>"
license-file = ["LICENSE.txt", "0"]
extended-description = """\
A utility for displaying bunyan JSON format log files \
to the console in a easy to read colorful format."""
section = "utility"
priority = "optional"
assets = [
    ["target/release/bunyan", "usr/bin/", "755"],
    ["target/man/bunyan.1.gz", "usr/share/man/man1/", "644"]
]

[package.metadata.generate-rpm]
summary = """\
A utility for displaying bunyan JSON format log files \
to the console in a easy to read colorful format."""
section = "utility"
priority = "optional"
assets = [
    { source = "target/release/bunyan", dest = "/usr/bin/bunyan", mode = "755" },
    { source = "target/man/bunyan.1.gz", dest = "/usr/share/man/man1/bunyan.1.gz", mode = "644" },
]